fix contrast in power select search box

--- a/app/styles/_component.power-select.scss
+++ b/app/styles/_component.power-select.scss
@@ -48,7 +48,31 @@
 }
 
 .ember-power-select-search-input {
- font-family: flanders-sans,sans-serif;
+  font-family: flanders-sans,sans-serif;
+
+  &::-webkit-input-placeholder {
+    color: $gray-light-contrast;
+    font-style: italic;
+    font-weight: 300;
+  }
+
+  &::-moz-placeholder {
+    color: $gray-light-contrast;
+    font-style: italic;
+    font-weight: 300;
+  }
+
+  &:-ms-input-placeholder {
+    color: $gray-light-contrast;
+    font-style: italic;
+    font-weight: 300;
+  }
+
+  &:-moz-placeholder {
+    color: $gray-light-contrast;
+    font-style: italic;
+    font-weight: 300;
+  }
 }
 
 .ember-power-select-search-input:focus {
